platform/deploy/infra/minio/templates/peerauthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: minio-mtls
  namespace: minio
spec:
  mtls:
    mode: STRICT
