platform/deploy/infra/minio/templates/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: minio-istio-mtls
  namespace: minio
  labels:
    app: minio
spec:
  host: minio.minio.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
